public abstract class EstrategiaRegla {
    public abstract void notificar(String mensaje, Severidad severidad, SistemaDeEscucha sistemaDeEscucha);
}
