public interface IMonitor {
    void imprimirPantalla(String mensaje, String color);
    String BLUE = "Blue";
    String YELLOW = "Yellow";
    String RED = "Red";
    String GRAY = "Gray";
}
