public enum Severidad {
    TRACE, DEBUG, INFO, WARN, ERROR, FATAL;
}
